# S25Viewer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  S25DecoderWrapper.h  S25ImageRenderer.cpp  S25ImageRenderer.h  S25LayerModel.cpp  S25LayerModel.h  main.cpp  qml.qrc  s25image.cpp  s25image.h  s25imageview.cpp  s25imageview.h  viewer.qml  widget.cpp  widget.h  widget.ui
.github/workflows/: cmake.yml
s25decoder/: Cargo.toml  S25Decoder.h
s25decoder/src/: lib.rs  s25.rs  utils.rs
