[package]
name = "s25decoder"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

[lib]
name = "s25decoder"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s25 = "0.2.1"
